--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@smag0/generator-smag",
+  "name": "generator-smag",
   "version": "1.0.0",
   "description": "generator for smag Solid webapps",
   "main": "index.js",
